improve looper combobox padding

--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -247,8 +247,7 @@ LooperWindow #buttonRec[blinking="true"]:checked
 #widgetBottom QComboBox                         /* the colors inside the combo box*/
 {
     border: 1px solid rgba(0, 0, 0, 128);
-    min-width: 1em;
-    padding: 0px 0px 0px 0px;
+    padding: 1px 2px 1px 2px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop: 0.0 #FDE5A9,
         stop: 1.0 #FFB301);
@@ -260,6 +259,16 @@ LooperWindow #buttonRec[blinking="true"]:checked
 {
     background-color: rgb(179, 89, 37);
     color: rgb(254, 181, 102);
+}
+
+LooperWindow #maxLayersComboBox
+{
+    min-width: 1em;
+}
+
+LooperWindow #comboBoxPlayMode
+{
+    min-width: 7em;
 }
 
 LooperWindow QComboBox QAbstractItemView      /* the colors inside drop down menu of the combo box*/
