--- a/src/resources/css/themes/Black_nm/Dialogs.css
+++ b/src/resources/css/themes/Black_nm/Dialogs.css
@@ -165,6 +165,7 @@ PluginScanDialog QGroupBox
 PrivateServerDialog #comboBoxServers
 {
     border: 1px solid rgba(0, 0, 0, 30);
+    padding: 1px 3px 1px 3px;
     background-color: rgb(100, 100, 100);
     color: rgb(60, 60, 60);
     selection-background-color: rgb(50, 50, 50);
