rounded panelcombos font color match

--- a/src/resources/css/themes/Rounded/NinjamWindow.css
+++ b/src/resources/css/themes/Rounded/NinjamWindow.css
@@ -234,6 +234,11 @@ NinjamPanel QComboBox               /* bpi, bpm, accents and shape comboboxes */
     background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1, stop:0 rgba(0, 0, 0, 30), stop:1 rgba(0, 0, 0, 50));
 }
 
+#panelCombos QComboBox
+{
+    color: rgb(20, 20, 20);
+}
+
 #comboBpi-topLevel
 {
     border: none;
