--- a/src/resources/css/themes/Volcano_nm/BaseTrack.css
+++ b/src/resources/css/themes/Volcano_nm/BaseTrack.css
@@ -96,6 +96,7 @@ BaseTrackView[unlighted="true"] #buttonBoost:checked
     border-top: none;
     border-style: solid;
     border-color: rgba(0, 0, 0, 60);
+    color: rgb(254, 181, 102);
 }
 
 #soloButton, #muteButton
