--- a/src/resources/css/themes/Rounded/BaseTrack.css
+++ b/src/resources/css/themes/Rounded/BaseTrack.css
@@ -103,6 +103,7 @@ BaseTrackView[unlighted="true"]
         stop:1 rgb(90, 90, 90));
 }
 
+/*
 PeakMeter
 {
     background-color: rgba(0, 0, 0, 10);
@@ -111,6 +112,7 @@ PeakMeter
     min-width: 2px;
     min-height: 2px;
 }
+*/
 
 
 /* SLIDERS ---------------- */
