--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -273,24 +273,14 @@
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="metersLayout">
-       <property name="spacing">
-        <number>2</number>
+      <widget class="AudioMeter" name="peakMeter" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
-       <item>
-        <widget class="AudioMeter" name="peakMeterLeft" native="true">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="AudioMeter" name="peakMeterRight" native="true"/>
-       </item>
-      </layout>
+      </widget>
      </item>
     </layout>
    </item>
